fix z-index

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
 	border-bottom: 1px solid #eee;
 	background: white;
 	position: fixed;
+	z-index: 10;
 }
 #brand {
 	height: 50px;
